--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="style.css" />
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="icon" href="icon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="icon.png" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="icon.png">
+
 </head>
 
 <body>
@@ -39,7 +43,7 @@
           <label>Party Name <input id="partyName" required placeholder="Party Name"></label>
           <label>Purpose <input id="purpose" placeholder="Note / Reference"></label>
           <div class="row">
-            <label>Debit <input id="debit" type="number" step="0.01" ></label>
+            <label>Debit <input id="debit" type="number" step="0.01"></label>
             <label>Credit <input id="credit" type="number" step="0.01"></label>
           </div>
           <label>Reference <input id="reference"></label>
